--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "faq-as-a-service",
+  "name": "@headless-faq/backend",
   "version": "0.5.0",
   "description": "",
   "scripts": {
@@ -26,21 +26,8 @@
   "author": "David Shekunts @dionid",
   "license": "ISC",
   "dependencies": {
-    "@dddl/common": "^1.0.18",
-    "@dddl/cqrs": "^1.0.30",
-    "@dddl/cqrs-inmemory": "^1.0.30",
-    "@dddl/dal": "^1.0.30",
-    "@dddl/dal-knex": "^1.0.30",
-    "@dddl/domain": "^1.0.30",
-    "@dddl/eda": "^1.0.30",
-    "@dddl/eda-inmemory": "^1.0.30",
-    "@dddl/errors": "^1.0.30",
-    "@dddl/logger": "^1.0.30",
-    "@dddl/rop": "^1.0.30",
-    "@dddl/serviceobject": "^1.0.30",
-    "@dddl/usecase": "^1.0.30",
-    "@dddl/usecase-decorators": "^1.0.30",
-    "@dddl/usecase-decorators-knex": "^1.0.30",
+    "@dddl/core": "^1.2.3",
+    "@dddl/knex": "^1.2.3",
     "@google-cloud/secret-manager": "^3.0.0",
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.1.1",
